--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "axios": "^1.13.5",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-hook-form": "^7.71.1",
     "react-icons": "^5.5.0",
     "react-router": "^7.13.0",
     "react-router-dom": "^7.13.0",
+    "sweetalert2": "^11.26.18",
     "swiper": "^12.1.0",
     "tailwindcss": "^4.1.18"
   },
