--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@stripe/react-stripe-js": "^5.6.0",
+    "@stripe/stripe-js": "^8.7.0",
     "@tailwindcss/vite": "^4.1.18",
     "@tanstack/react-query": "^5.90.21",
     "axios": "^1.13.5",
@@ -23,6 +25,7 @@
     "react-icons": "^5.5.0",
     "react-router": "^7.13.0",
     "react-router-dom": "^7.13.0",
+    "stripe": "^20.3.1",
     "sweetalert2": "^11.26.18",
     "swiper": "^12.1.0",
     "tailwindcss": "^4.1.18"
