--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-icons": "^5.5.0",
     "react-router": "^7.13.0",
     "react-router-dom": "^7.13.0",
+    "react-to-print": "^3.2.0",
     "stripe": "^20.3.1",
     "sweetalert2": "^11.26.18",
     "swiper": "^12.1.0",
