--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-router": "^7.13.0",
     "react-router-dom": "^7.13.0",
     "react-to-print": "^3.2.0",
+    "recharts": "^3.7.0",
     "stripe": "^20.3.1",
     "sweetalert2": "^11.26.18",
     "swiper": "^12.1.0",
